fixing header alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -11,7 +11,7 @@ main {
     display: flex;
     flex-direction: column;
     text-align: center;
-    
+    justify-items: center;
     
 }
 
@@ -35,6 +35,7 @@ main {
 #header {
     display: flex;
     text-align: center;
+    
     font-size: 2.5vw;
     margin-top: 0;
     
